# sokol-c

./: CMakeLists.txt  Makefile  cam.c  main.c  sokol.h
src/: 1.h  cam.c  cam.h  level.c  level.h
